# starrynift-automation

./: .gitignore  README.md  config.py  main.py  pyproject.toml  requirements.txt  settings.py
data/: private_keys.example.txt  proxies.example.txt
data/abi/: daily_claim_abi.json
modules/: account.py  executor.py  generate_wallets.py  utils.py  withdraw_from_binance.py
